# FusionJEPA

./: .gitignore  CODING_AGENT_PLAN.md  LICENSE  README.md  RESEARCH_PLAN.md  pyproject.toml  run_demo.py  run_demo_2.py
archive/ae_baseline/: README.md
configs/cluster/: frontier.yaml  local.yaml
configs/data/: tokamark.yaml
configs/experiment/: mast_smoke.yaml  synthetic_smoke.yaml  synthetic_smoke_jepa.yaml
configs/model/: jepa_ema_small.yaml  raw_predictor_small.yaml
docs/: ResearchPlan.MD  environment.md  eval_stage1_panels_patch.md  eval_stage1_plan.md  phase_c_step1_status.md  spectro_video_status.md  spectrogram_step0_findings.md  spectrogram_tokenizer_plan.md  stage2_with_video_plan.md  video_tokenizer_plan.md
docs/decisions/: 0001-tokamark-pin.md  0002-tokamark-adapter-semantics.md
docs/milestones/: m1-closure.md
examples/Machine_Learning/: test_dataloader.ipynb
manifests/: upstream.yaml
manifests/datasets/: dev_subset_v1.yaml  tokamark_v1.yaml  tokamark_v1_shots.csv
manifests/splits/: tokamark_official.yaml
scripts/: README.md  acquire_tokamark.py  actuator_reconstruction.py  benchmark_e2e_memory.py  build_dataset_cache.py  build_dev_subset.py  capture_no_video_fixture.py  diagnose_video_ae.py  eval_video_reconstruction.py  fast_time_series_reconstruction.py  inspect_video_data.py  inspect_video_frames.py  profile_reconstruction.py  run_demo.py  run_demo_2.py  spectrogram_reconstruction.py  standardize_dataset.py  train_co2_channel_ast.sh  train_ece_channel_ast.sh  train_mhr_channel_ast.sh  train_unimodal_autoencoder.py  train_video_reconstruction.py  visualize_co2_channel_ast.py  visualize_ece_channel_ast.py  visualize_mhr_channel_ast.py
scripts/data_fetching_omega/: README.md  add_to_h5.py  config_atlas.yaml  config_chiron.yaml  convert_dtypes.sh  merge_h5.py  read_mds.sh  rename_h5_groups.py  submit_read_mds_batches.sh
scripts/data_preparation/: check_dataset_integrity.py  convert_float64_to_float32.py  fetch_data.py  make_processing_stats.py  mygadata.py  prepare_data.py  standardize_dataset.py
scripts/slurm/: benchmark_e2e_memory.sh  benchmark_stage2_ext.sh  compute_ae_token_stats.sh  eval_e2e_stage1.sh  eval_e2e_stage2.sh  generate_tokens.sh  make_processing_stats.sh  prepare_data.sh  profile_stage1.sh  sample_ddp.sh  test_dynamics_overfit.sh  train_bc_stage1.sh  train_bc_stage2.sh  train_bes.sh  train_bolo_raw.sh  train_c_stage1.sh  train_cer_rot.sh  train_cer_ti.sh  train_co2.sh  train_co2_tf_only.sh  train_e2e_stage1.sh  train_e2e_stage2.sh  train_e2e_stage2_delta.sh  train_e2e_stage2_extended.sh  train_e2e_stage3.sh  train_ece.sh  train_ece_conv_fct.sh  train_ece_conv_nc.sh  train_ece_conv_tfc.sh  train_ece_tf_only.sh  train_filterscopes.sh  train_foundation_model.sh  train_i_coil.sh  train_ich.sh  train_langmuir.sh  train_mhr.sh  train_mhr_conv_dw_ft.sh  train_mhr_gate.sh  train_mhr_gate_512.sh  train_mhr_tf_only.sh  (+15 more)
scripts/slurm_frontier/: _frontier_common.sh  build_dataset_cache.sh  train_e2e_stage1.sh  train_e2e_stage2_delta.sh
scripts/slurm_rocm/: setup_rocm_env.sh  submit_all.sh  train_bes.sh  train_bolo_raw.sh  train_cer_rot.sh  train_cer_ti.sh  train_co2.sh  train_ddp.sh  train_e2e_stage1_ddp.sh  train_e2e_stage2_ddp.sh  train_e2e_stage2_delta_ddp.sh  train_e2e_stage2_extended_ddp.sh  train_e2e_stage3_ddp.sh  train_ece.sh  train_filterscopes.sh  train_i_coil.sh  train_ich.sh  train_langmuir.sh  train_mhr.sh  train_mirnov.sh  train_mse.sh  train_neutron_rate.sh  train_sxr.sh  train_ts_core_density.sh  train_ts_core_temp.sh  train_ts_tangential_density.sh  train_ts_tangential_temp.sh  train_vib.sh
scripts/training/: actuator_reconstruction.py  audit_actuator_stats.py  benchmark_data_loader.py  cer_rot_profile_reconstruction.py  cer_ti_profile_reconstruction.py  compute_ae_token_stats.py  debug_actuator_propagation.py  debug_cer_probe.py  debug_e2e_latent_continuity.py  debug_stage3_rollout_eval.py  eval_e2e.py  eval_e2e_stage1.py  eval_e2e_stage2.py  fast_time_series_reconstruction.py  filterscopes_reconstruction.py  generate_token_dataset.py  mse_profile_reconstruction.py  probe_stage1_loading.py  profile_reconstruction.py  profile_stage1.py  run_demo.py  spectrogram_reconstruction.py  test_dynamics_overfit.py  train_all_unimodal.sh  train_e2e_stage1.py  train_e2e_stage2.py  train_e2e_stage2_delta.py  train_e2e_stage2_extended.py  train_e2e_stage3.py  train_multimodal_latent_space_predictor.py  train_multimodal_predictor.py  train_spectrogram_ae.py  train_unimodal_autoencoder.py  train_video_ae.py  ts_core_density_profile_reconstruction.py  ts_core_temp_profile_reconstruction.py  ts_tangential_density_profile_reconstruction.py  ts_tangential_temp_profile_reconstruction.py  video_reconstruction.py  visualize_actuators.py
signal_registry/: mast.yaml  schema.yaml
slurm/: e01_baseline.slurm  smoke.slurm
src/faith/: __init__.py
src/fusion_jepa/: __init__.py  config.py
tests/: test_aurora.py  test_dynamics_rollout.py  test_model_shapes.py
tests/data/: test_spectrogram_loading.py  test_video_loading.py
tests/e2e/: __init__.py  test_actuator_tokenizer.py  test_backbone.py  test_fast_time_series_tokenizer.py  test_full_model.py  test_lora.py  test_output_heads.py  test_replay.py  test_rollout.py  test_rollout_trained.py  test_slow_time_series_tokenizer.py  test_video_integration.py  test_video_tokenizer.py
tests/fixtures/: synthetic.py
tests/frontier/: smoke_ddp.py
tests/integration/: __init__.py  test_resume_reproducibility.py  test_train_smoke_cpu.py
tests/unit/: test_accounting.py  test_acquire_tokamark.py  test_action_diagnostics.py  test_action_encoder.py  test_batch.py  test_build.py  test_build_dev_subset.py  test_capacity.py  test_checkpoint.py  test_cli.py  test_collapse_diagnostics.py  test_config.py  test_decoders.py  test_distributed.py  test_ema.py  test_encoder.py  test_imports.py  test_inspect_data.py  test_jepa.py  test_latent_prediction.py  test_logging.py  test_loop.py  test_manifests.py  test_persistence.py  test_predictor.py  test_raw_prediction.py  test_raw_world_model.py  test_registry.py  (+9 more)
(+159 files in other folders)
