[project]
name = "faith"
requires-python = ">= 3.11"
authors = [
  { name = "Azarakhsh Jalalvand", email = "azarakhsh.jalalvand@princeton.edu" },
  { name = "Kouroche Bouchiat", email = "bouchiat@princeton.edu" },
  { name = "Nathaniel Chen", email = "nathaniel@princeton.edu" },
  { name = "Peter Steiner", email = "peter.steiner@princeton.edu" },
]
dependencies = [
  "einops>=0.8.2,<0.9",
  "h5py>=3.15.1,<4",
  "ipykernel>=7.2.0,<8",
  "ipywidgets>=8.1.8,<9",
  "matplotlib>=3.10.8,<4",
  "numpy>=1.26.4,<3",
  "pandas>=3.0.0,<4",
  "scipy",
  "tables>=3.10.2,<4",
  "torch",
  "torchmetrics>=1.9.0,<2",
  "torchinfo>=1.8.0,<2",
  "torchvision",
  "transformers>=5.1.0,<6",
  "pytest>=9.0.2,<10",
  "tensorboard>=2.20.0,<3",
  "wandb>=0.25.1,<0.26",
  "hydra-core",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/faith/__init__.py"

[tool.pixi.workspace]
channels = ["conda-forge", "ga-fdp"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
faith = { path = ".", editable = true }
torch = { version = ">=2.5.1,<2.11", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1,<0.22", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.target.osx.pypi-dependencies]
# No CUDA support on macOS, use `cpu` wheels.
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }

[tool.ruff]
line-length = 88

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11,<3.12"
hydra-core = ">=1.3.2,<2"
line_profiler = ">=5.0.2,<6"

[tool.pixi.feature.fdp]
platforms = ["linux-64"]

[tool.pixi.feature.fdp.dependencies]
toksearch = { channel = "ga-fdp" }
toksearch_d3d = { channel = "ga-fdp" }

[tool.pixi.environments]
fdp = ["fdp"]