[project]
name = "fusion_jepa"
requires-python = ">= 3.11"
authors = [
  { name = "Azarakhsh Jalalvand", email = "azarakhsh.jalalvand@princeton.edu" },
  { name = "Kouroche Bouchiat", email = "bouchiat@princeton.edu" },
  { name = "Nathaniel Chen", email = "nathaniel@princeton.edu" },
  { name = "Peter Steiner", email = "peter.steiner@princeton.edu" },
]
dependencies = [
  "einops>=0.8.2,<0.9",
  "h5py>=3.15.1,<4",
  # imageio + imageio-ffmpeg used by scripts/training/eval_e2e_stage1_phase3_1_video.py
  # to write video stitched plots as mp4. imageio-ffmpeg ships a static
  # ffmpeg binary, so the encoder works on Frontier without an OS-level
  # ffmpeg package. Listed in [project] (shared across default / fdp /
  # frontier features) so every env carries the same encoder.
  "imageio>=2.30,<3",
  "imageio-ffmpeg>=0.4.9,<1",
  "ipykernel>=7.2.0,<8",
  "ipywidgets>=8.1.8,<9",
  "matplotlib>=3.10.8,<4",
  "numpy>=1.26.4,<3",
  # Image-processing libs for tokamak-animation cam ↔ PNG alignment
  # (cv2.findTransformECC + skimage.registration).
  "opencv-python-headless>=4.10,<5",
  "scikit-image>=0.24,<0.26",
  "pandas>=3.0.0,<4",
  "scipy",
  "tables>=3.10.2,<4",
  "torch",
  "torchmetrics>=1.9.0,<2",
  "torchinfo>=1.8.0,<2",
  "torchvision",
  "transformers>=5.1.0,<6",
  "pytest>=9.0.2,<10",
  "tensorboard>=2.20.0,<3",
  "wandb>=0.25.1,<0.26",
  "hydra-core",
  # Fusion-JEPA data pipeline deps (Task 0.1): structured configs, chunked
  # array storage + remote filesystem access, tabular utilities. Shared
  # across default / fdp / frontier features, same as imageio above.
  "omegaconf>=2.3",
  "zarr>=3",
  "fsspec",
  "s3fs",
  "xarray",
  "scikit-learn",
  "pyyaml",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/fusion_jepa/__init__.py"

[tool.hatch.build.targets.wheel]
# Dual-package transition: fusion_jepa is the new home, tokamak_foundation_model
# is the legacy package still used by every training script, and faith is a
# deprecated import shim. All three ship until callers finish migrating.
packages = ["src/fusion_jepa", "src/tokamak_foundation_model", "src/faith"]

[tool.pixi.workspace]
channels = ["conda-forge", "ga-fdp"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
fusion_jepa = { path = ".", editable = true }

[tool.pixi.target.osx.pypi-dependencies]
# No CUDA support on macOS, use `cpu` wheels.
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.feature.cuda]
platforms = ["linux-64", "win-64"]

[tool.pixi.feature.cuda.pypi-dependencies]
torch = { version = ">=2.5.1,<2.11", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = ">=0.20.1,<0.22", index = "https://download.pytorch.org/whl/cu124" }

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not remote_data and not frontier'"
markers = [
  "remote_data: needs network/data access",
  "frontier: needs Frontier compute",
]

[tool.pixi.tasks]
test-unit = "pytest tests/unit/ -v"
lint = "ruff check ."

[tool.pixi.dependencies]
python = ">=3.11,<3.12"
hydra-core = ">=1.3.2,<2"
line_profiler = ">=5.0.2,<6"
# Needed for the `lint` pixi task (Task 0.1). Added here (conda) rather than
# to [project.dependencies] (pypi) so it never touches the fdp environment's
# already-delicate PyPI solve (transformers/tokenizers vs. the ga-fdp conda pins).
ruff = ">=0.6,<1"

[tool.pixi.feature.fdp]
platforms = ["linux-64"]

[tool.pixi.feature.fdp.dependencies]
toksearch = { channel = "ga-fdp" }
toksearch_d3d = { channel = "ga-fdp" }

[tool.pixi.feature.data]
# Upstream TokaMark benchmark suite (Task 1.1), pinned to the exact commit
# manifests/upstream.yaml records for `tokamark` (tag OS_v2.0). Keep the two
# in sync -- test_installed_pin_matches_upstream_manifest enforces it.
#
# Scoped to its own feature (Risk R1 from the task-1.1 brief) rather than the
# shared [tool.pixi.pypi-dependencies]: tokamark's own pyproject.toml pins
# `jupyterlab-widgets==3.0.15` exactly, which conflicts with the fdp
# environment's ga-fdp/toksearch conda stack (pulls in the conda `jupyter`
# meta-package, which fixes jupyterlab_widgets at 3.0.16 via the conda
# solve). Sharing this feature with default/frontier only -- not fdp --
# sidesteps that conflict without vendoring or relaxing any pin we control.
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.feature.data.pypi-dependencies]
tokamark = { git = "https://github.com/UKAEA-IBM-STFC-Fusion-FMs/tokamark", rev = "1a200f4588addaad2ae3d53d438d9e1946c09294" }

[tool.pixi.feature.frontier]
platforms = ["linux-64"]

[tool.pixi.feature.frontier.pypi-dependencies]
# rocm7.1 index ships torch 2.10.0 + torchvision 0.25-0.26 only.
torch       = { version = ">=2.10,<2.11",   index = "https://download.pytorch.org/whl/rocm7.1" }
torchvision = { version = ">=0.25,<0.27",   index = "https://download.pytorch.org/whl/rocm7.1" }
# torch 2.10 declares triton-rocm as a dep; uv won't auto-discover it
# through the per-package `index = ...` above, so list it explicitly.
triton-rocm = { version = "*",              index = "https://download.pytorch.org/whl/rocm7.1" }

[tool.pixi.environments]
default = ["cuda", "data"]
fdp = ["fdp", "cuda"]
frontier = ["frontier", "data"]